welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: type mismatch;
 found   : Int
 required: java.awt.Color
	var T = Array[Color](x);var x = 0;x == getHauteurMonde();
                             ^Array1:5: error: not found: value getHauteurMonde
	var T = Array[Color](x);var x = 0;x == getHauteurMonde();
                                               ^