welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
}
def rassemblage(){
	var T = Array[Color](x);var x = 0;x == getHauteurMonde();
	for (i <- 1 to x){
		T(i) = getCouleurSol();avance();
	}
}